<package format="2">
  <name>scrollgrid</name>
  <version>0.0.0</version>
  <description>
      scrollgrid is best scrolling grid
  </description>
  <maintainer email="dimatura@cmu.edu">Daniel Maturana</maintainer>

  <license>BSD</license>

  <!--<url type="website">http://ros.org/wiki/scrollgrid</url>-->
  <!-- <url type="bugtracker"></url> -->

  <author email="dimatura@cmu.edu">Daniel Maturana</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>eigen</depend>
  <depend>pcl_util</depend>
  <depend>roscpp</depend>

</package>
